--- a/index.html
+++ b/index.html
@@ -2,28 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Portfolio</title>
+  <title>Login Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Fathima Saleem</h1>
-    <p>BCA Student | Aspiring Python Developer</p>
-  </header>
-  <section>
-    <h2>About Me</h2>
-    <p>I am a 2nd-year BCA student at IGNOU, learning Python, Django, C, C++, and front-end development.</p>
-  </section>
-  <section>
-    <h2>Projects</h2>
-    <ul>
-      <li>Login Page using HTML & CSS</li>
-      <li>Static Website (this one!)</li>
-      <li>C & C++ Problem Solving</li>
-    </ul>
-  </section>
-  <footer>
-    <p>Contact: fathimabaanu2024@gmail.com</p>
-  </footer>
+  <div class="login-container">
+    <h2>Login</h2>
+    <form>
+      <label>Username:</label>
+      <input type="text" placeholder="Enter username" required>
+      <label>Password:</label>
+      <input type="password" placeholder="Enter password" required>
+      <button type="submit">Login</button>
+    </form>
+  </div>
 </body>
 </html>
